--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/jpg" href="images/Logo.png"/>
   <script src="https://unpkg.com/fast-image-zoom@7.0.1/dist/fast-image-zoom.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <title>PT Restu Agung Narogong</title>
   
 </head>
-<body class="flex relative bg-repeat bg-[length:100px_100px] md:overflow-x-hidden" style="background-image: url('./images/Logo.png');">
-    <div class="absolute z-0 w-full h-full" style="background-color: rgba(255, 255, 255, 0.9);"></div>
-    <div class="m-auto max-w-[1366px] w-[1366px] z-10">
+<body>
+    <div>
       <header></header>
-      <main class="bg-white min-h-[400px]"></main>
+      <main></main>
       <footer></footer>
     </div>
 </body>
