--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,14 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <div class="loading-wrap w-full h-[80vh] flex z-30">
+      <div class="m-auto flex-column">
+        <div id="loading" class="mx-auto"></div>
+        <p class="mt-4 mx-auto font-primary color-primary text-[15px]">Sedang Memuat Konten</p>          
+      </div>
+    </div>
+    <main>
+    </main>
     <footer></footer>
 </body>
 </html>
