--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -51,3 +51,27 @@ align-items: center;
 .aboutus-bg{
 	background-color: rgba(255, 255, 255, 0.9);
 }
+
+label.error{
+	color: #DC2626;
+	font-family: Inter;
+	font-size: 13px;
+}
+
+#loading {
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: red;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
